crates/plotnik-tests/tests/02-parser/recovery_validation/captured_negated_field_def_body.txt
Q = -key @x
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot be captured
 --> query.ptk:1:10
  |
1 | Q = -key @x
  |          ^^
  |
help: remove the capture
  |
1 - Q = -key @x
1 + Q = -key 
  |
help: a negated grammar field asserts absence and produces no value
